@@ -1,5 +1,8 @@
 Release Note
 
+* 8/5/2014
+  * added campaign info
+
 * 8/1/2014
   * introduced waitInput for Event Picking
   * fixed scouts to take nEventsPerJob into account
